prevent overflow

--- a/src/global.css
+++ b/src/global.css
@@ -8,4 +8,5 @@ body,
   width: 100%;
   height: 100%;
   background: #2b2b33;
+  overflow: hidden;
 }
